Разбила код на модули

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
                 <!-- Добавление хэш-тегов и комментария к изображению -->
                 <fieldset class="img-upload__text text">
-                  <input class="text__hashtags" name="hashtags" placeholder="#хэш-тег" minlength="2" maxlength="104">
+                  <input class="text__hashtags" name="hashtags" placeholder="#хэш-тег" minlength="2">
                   <textarea class="text__description" name="description" placeholder="Ваш комментарий..." maxlength="140"></textarea>
                 </fieldset>
 
@@ -236,6 +236,9 @@
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
 
-<script src="js/pictures.js"></script>
+  <script src="js/util.js"></script>
+  <script src="js/pictures.js"></script>
+  <script src="js/preview.js"></script>
+  <script src="js/form.js"></script>
 </body>
 </html>
